--- a/web/main.css
+++ b/web/main.css
@@ -1,7 +1,7 @@
 /*
  *     Plik main.css jest częścią projektu Killer System - Prostego narzędzia do prowadzenia gry w killera
  *     Kod źródłowy: https://bitbucket.org/fedox8/boom-killer/src
- *     Copyright (C) 15/08/2019, 15:03  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
+ *     Copyright (C) 20/08/2019, 12:47  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
  *
  *     This program is free software: you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -16,6 +16,14 @@
  *     You should have received a copy of the GNU General Public License
  *     along with this file.  If not, see https://www.gnu.org/licenses/.
  */
+
+.source-page a{
+    position: absolute;
+    bottom: 2%;
+    right: 2%;
+    color: white !important;
+    font-size: 18px !important;
+}
 
 .login-page {
     width: 360px;
@@ -138,7 +146,8 @@ body {
     margin-top: 5px;
 }
 .alives{
-    padding: 20px;
+    padding: 22px;
+    font-size: 22px;
     text-align: center;
 }
 .alives > a{
