--- a/web/main.css
+++ b/web/main.css
@@ -1,7 +1,7 @@
 /*
  *     Plik main.css jest częścią projektu Killer System - Prostego narzędzia do prowadzenia gry w killera
  *     Kod źródłowy: https://bitbucket.org/fedox8/boom-killer/src
- *     Copyright (C) 20/08/2019, 12:47  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
+ *     Copyright (C) 21/08/2019, 09:47  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
  *
  *     This program is free software: you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -17,7 +17,7 @@
  *     along with this file.  If not, see https://www.gnu.org/licenses/.
  */
 
-.source-page a{
+.source-page a {
     position: absolute;
     bottom: 2%;
     right: 2%;
@@ -89,6 +89,10 @@
     display: none;
 }
 
+.tip {
+    color: white;
+}
+
 .container {
     position: relative;
     z-index: 1;
@@ -130,30 +134,35 @@
 }
 
 body {
-    background: #222; /* fallback for old browsers */font-family: 'VT323', monospace;
+    background: #222; /* fallback for old browsers */
+    font-family: 'VT323', monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-#error{
+
+#error {
     color: #e20000;
     font-size: 20px;
     margin-top: 5px;
 }
 
-#target{
+#target {
     color: white;
     font-size: 20px;
     margin-top: 5px;
 }
-.alives{
+
+.alives {
     padding: 22px;
     font-size: 22px;
     text-align: center;
 }
-.alives > a{
+
+.alives > a {
     color: white;
 }
-.alives > a:hover{
+
+.alives > a:hover {
     color: #222222;
     background-color: white;
 }
